<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.dicodingstoryappv1.ui.listStory.ListStoryActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_user" />

    <ProgressBar
        android:id="@+id/progres_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add"
        android:focusable="true"
        android:src="@drawable/icon_add_white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:clickable="true"
        android:visibility="invisible"
        android:contentDescription="@string/add_story"
        app:layout_constraintBottom_toTopOf="@+id/fabAction"
        app:layout_constraintEnd_toEndOf="@+id/fabAction"
        app:srcCompat="@drawable/ic_image_add_white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:clickable="true"
        android:visibility="invisible"
        android:contentDescription="@string/open_maps"
        app:layout_constraintBottom_toTopOf="@+id/fabAddStory"
        app:layout_constraintEnd_toEndOf="@+id/fabAddStory"
        app:srcCompat="@drawable/ic_map_white" />

</androidx.constraintlayout.widget.ConstraintLayout>