<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <!-- Batasan dalam tampilan list -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_incard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/cardview_shadow_end_color"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_avatar_incard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/avatar_incard"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_incard"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#B2000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_space" />

        <Space
            android:id="@+id/top_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_name_incard"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name_incard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_incard"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar_incard"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_desc_incard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/desc_incard"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
